--- a/package.json
+++ b/package.json
@@ -2,5 +2,8 @@
   "name": "decade-street-ekam",
   "version": "1.0.0",
   "description": "Decade Street Ekam — Hospitality Investment Brochure",
-  "private": true
+  "private": true,
+  "scripts": {
+    "dev": "npx serve"
+  }
 }
